[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/cards_viewer.gd" type="Script" id=1]
[ext_resource path="res://imgs/test cards/swamp-land-card-378800628.png" type="Texture" id=2]

[node name="cards_viewer" type="Node2D"]
z_index = 4096
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1026.0
margin_bottom = 600.0
color = Color( 0.721569, 0.0588235, 0.713726, 0 )

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect"]
margin_left = 48.0
margin_top = 24.0
margin_right = 993.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/ScrollContainer"]
margin_right = 945.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="close" type="Button" parent="."]
margin_left = 42.0
margin_top = 53.0
margin_right = 98.0
margin_bottom = 94.0
text = "close"

[node name="scroll_up2" type="Button" parent="."]
margin_left = 41.0
margin_top = 121.0
margin_right = 97.0
margin_bottom = 162.0
text = "up"

[node name="scroll_down" type="Button" parent="."]
margin_left = 41.0
margin_top = 190.0
margin_right = 97.0
margin_bottom = 231.0
text = "down"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 488, 322 )
scale = Vector2( 1.05664, 1 )
z_index = -1
texture = ExtResource( 2 )

[connection signal="pressed" from="close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="scroll_up2" to="." method="_on_scroll_up_pressed"]
[connection signal="pressed" from="scroll_down" to="." method="_on_scroll_down_pressed"]
